--- a/colab/example_notebook_for_google_colab.ipynb
+++ b/colab/example_notebook_for_google_colab.ipynb
@@ -38,6 +38,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This is a text"
+      ],
+      "metadata": {
+        "id": "YkJFpKKZQhMl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/cmanderskronquist/getting_started_with_ai/"
@@ -49,7 +58,7 @@
         "id": "jKErq4ReMv9d",
         "outputId": "e34b2a7c-c104-43bd-a333-e3a7df050846"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +81,7 @@
         "id": "I7g9EOQaOiPn",
         "outputId": "7f805b09-9714-4367-e885-fc6a57e79cc3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +115,7 @@
         "id": "am6p4QYyO6e8",
         "outputId": "3461bcd8-6049-41f2-ae52-5a43156aaebb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
