--- a/colab/example_notebook_for_google_colab.ipynb
+++ b/colab/example_notebook_for_google_colab.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Snarf from Git to This Colab"
+        "This is a test of pulling from github to Colab"
       ],
       "metadata": {
         "id": "ezTIGb97Mvv0"
@@ -40,10 +40,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is a text"
+        "Run this to clone the repo"
       ],
       "metadata": {
-        "id": "YkJFpKKZQhMl"
+        "id": "BZ3afNEMRMuh"
       }
     },
     {
@@ -56,18 +56,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jKErq4ReMv9d",
-        "outputId": "e34b2a7c-c104-43bd-a333-e3a7df050846"
+        "outputId": "4880c93f-f971-49a9-b44b-56168081ac53"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'getting_started_with_ai' already exists and is not an empty directory.\n"
+            "Cloning into 'getting_started_with_ai'...\n",
+            "remote: Enumerating objects: 137, done.\u001b[K\n",
+            "remote: Counting objects: 100% (137/137), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (95/95), done.\u001b[K\n",
+            "remote: Total 137 (delta 55), reused 99 (delta 36), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (137/137), 174.67 KiB | 5.63 MiB/s, done.\n",
+            "Resolving deltas: 100% (55/55), done.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Run this to refresh the clone."
+      ],
+      "metadata": {
+        "id": "wegOOmATRLCE"
+      }
     },
     {
       "cell_type": "code",
@@ -79,29 +94,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I7g9EOQaOiPn",
-        "outputId": "7f805b09-9714-4367-e885-fc6a57e79cc3"
+        "outputId": "3d4b0f69-a26b-4ce6-a95c-c575ff7def03"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "remote: Enumerating objects: 6, done.\u001b[K\n",
-            "remote: Counting objects:  16% (1/6)\u001b[K\rremote: Counting objects:  33% (2/6)\u001b[K\rremote: Counting objects:  50% (3/6)\u001b[K\rremote: Counting objects:  66% (4/6)\u001b[K\rremote: Counting objects:  83% (5/6)\u001b[K\rremote: Counting objects: 100% (6/6)\u001b[K\rremote: Counting objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Compressing objects:  25% (1/4)\u001b[K\rremote: Compressing objects:  50% (2/4)\u001b[K\rremote: Compressing objects:  75% (3/4)\u001b[K\rremote: Compressing objects: 100% (4/4)\u001b[K\rremote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 4 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Unpacking objects:  25% (1/4)\rUnpacking objects:  50% (2/4)\rUnpacking objects:  75% (3/4)\rUnpacking objects: 100% (4/4)\rUnpacking objects: 100% (4/4), 1.05 KiB | 1.05 MiB/s, done.\n",
-            "From https://github.com/cmanderskronquist/getting_started_with_ai\n",
-            "   9e223b3..86ae0ea  main       -> origin/main\n",
-            "Updating 9e223b3..86ae0ea\n",
-            "Fast-forward\n",
-            " colab/main.py | 5 \u001b[32m+++++\u001b[m\n",
-            " 1 file changed, 5 insertions(+)\n",
-            " create mode 100644 colab/main.py\n"
+            "Already up to date.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And finally, run main.py"
+      ],
+      "metadata": {
+        "id": "eKVAlpdkRVHf"
+      }
     },
     {
       "cell_type": "code",
@@ -113,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "am6p4QYyO6e8",
-        "outputId": "3461bcd8-6049-41f2-ae52-5a43156aaebb"
+        "outputId": "abbf0929-c6e7-4639-f0e5-3bcb1bfdef57"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
