--- a/colab/example_notebook_for_google_colab.ipynb
+++ b/colab/example_notebook_for_google_colab.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,13 +49,31 @@
     {
       "cell_type": "code",
       "source": [
-        "! [ ! -d \"getting_started_with_ai\" ] && git clone https://github.com/cmanderskronquist/getting_started_with_ai/"
+        "!git clone https://github.com/cmanderskronquist/getting_started_with_ai/"
       ],
       "metadata": {
-        "id": "jKErq4ReMv9d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jKErq4ReMv9d",
+        "outputId": "4880c93f-f971-49a9-b44b-56168081ac53"
       },
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'getting_started_with_ai'...\n",
+            "remote: Enumerating objects: 137, done.\u001b[K\n",
+            "remote: Counting objects: 100% (137/137), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (95/95), done.\u001b[K\n",
+            "remote: Total 137 (delta 55), reused 99 (delta 36), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (137/137), 174.67 KiB | 5.63 MiB/s, done.\n",
+            "Resolving deltas: 100% (55/55), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -75,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I7g9EOQaOiPn",
-        "outputId": "c9f520c3-d125-4e77-be35-f513b6d13c29"
+        "outputId": "3d4b0f69-a26b-4ce6-a95c-c575ff7def03"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +126,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "am6p4QYyO6e8",
-        "outputId": "bfba5868-aa48-4001-c0de-122c1fc66000"
+        "outputId": "abbf0929-c6e7-4639-f0e5-3bcb1bfdef57"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cat /content/getting_started_with_ai/colab/main.py"
+      ],
+      "metadata": {
+        "id": "e65AHnjtSQOr",
+        "outputId": "9077a4fc-a5cf-435e-a17a-a851f3832151",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 4,
       "outputs": [
@@ -115,7 +157,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world!\n"
+            "#!/bin/python3\n",
+            "\n",
+            "from helloworld import hello\n",
+            "\n",
+            "hello()\n"
           ]
         }
       ]
