--- a/colab/example_notebook_for_google_colab.ipynb
+++ b/colab/example_notebook_for_google_colab.ipynb
@@ -49,7 +49,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/cmanderskronquist/getting_started_with_ai/"
+        "![ ! -d "getting_started_with_ai" ] && git clone https://github.com/cmanderskronquist/getting_started_with_ai/"
       ],
       "metadata": {
         "colab": {
